k8s/frontend.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend

---
# Deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: mca-frontend:1.1
          imagePullPolicy: Never # Important pour Kind
          ports:
            - containerPort: 80
